tests/error/return_expected.gw
#! [contains] invalid return type
fun int test() { return me; }
